--- a/hw3/experiments/sac/halfcheetah_reinforce1.yaml
+++ b/hw3/experiments/sac/halfcheetah_reinforce1.yaml
@@ -2,7 +2,7 @@ base_config: sac
 env_name: HalfCheetah-v4
 exp_name: reinforce1
 
-total_steps: 1000000
+total_steps: 5000000
 random_steps: 5000
 training_starts: 10000
 
@@ -16,6 +16,7 @@ soft_target_update_rate: 0.005
 actor_gradient_type: reinforce
 num_actor_samples: 1
 num_critic_updates: 1
+critic_learning_rate: 0.00003
 
 use_entropy_bonus: true
-temperature: 0.2
+temperature: 0.1
