--- a/hw3/experiments/sac/humanoid_sac.yaml
+++ b/hw3/experiments/sac/humanoid_sac.yaml
@@ -1,9 +1,9 @@
 base_config: sac
 env_name: Humanoid-v4
-exp_name: sac_humanoid_redq
+exp_name: sac_humanoid
 
-num_critic_networks: 10
-target_critic_backup_type: redq
+# num_critic_networks: 2
+# target_critic_backup_type: min
 
 total_steps: 5000000
 random_steps: 5000
